--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@
 
 body {
 	height: 100vh;
-	background-color: white;
 	display: flex;
+    background-image: url('img/BG.jpg');
+    background-size: cover;
 	justify-content: center;
 	align-items: center;
 }
@@ -99,7 +100,7 @@ header {
 	top: 0;
 	left: 0;
 	right: 0;
-	background-color: white;
+	background: rgba(0,0,0,0);
 	padding: 20px;
 	display: flex;
 	justify-content: center;
