--- a/phone_style.css
+++ b/phone_style.css
@@ -19,6 +19,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	flex-direction: column;
 }
 
 .card {
@@ -125,16 +126,16 @@ header {
 .card__content {
   flex: 1;
   text-align: left;
-  display: flex; /* Thêm dòng này */
-  justify-content: space-between; /* Thêm dòng này */
+  display: flex;
+  justify-content: space-between;
   padding: 10px;
 }
 
 .card__social {
   display: flex;
-  flex-direction: column; /* Thêm dòng này */
-  justify-content: center; /* Tùy chọn: căn giữa các phần tử trong .card__social */
-  align-items: center; /* Tùy chọn: căn giữa các phần tử trong .card__social */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: 0px;
 }
 
@@ -150,7 +151,7 @@ header {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 150px;
+	margin-top: 100px;
 }
 
 button {
