--- a/phone_style.css
+++ b/phone_style.css
@@ -151,7 +151,7 @@ header {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 100px;
+	margin-top: auto;
 }
 
 button {
