--- a/phone_style.css
+++ b/phone_style.css
@@ -149,9 +149,8 @@ header {
 .card-container {
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	flex-direction: column;
-	margin-top: auto;
+	margin-top: 100px;
 }
 
 button {
