--- a/phone_style.css
+++ b/phone_style.css
@@ -34,7 +34,6 @@ body {
 	margin-bottom: 20px;
 	display: flex;
 	flex-shrink: 10;
-	margin-left: 20px;
 	margin-top: 0px;
 }
 
@@ -94,7 +93,7 @@ p {
 
 .header {
 	position: fixed;
-	top: (100vh - 3em);
+	top: 0;
 	left: 0;
 	right: 0;
 	background: rgba(0,0,0,0);
@@ -150,7 +149,6 @@ p {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: calc((100vh - 3em) * 3);
     transform: scale(3);
 }
 
