--- a/phone_style.css
+++ b/phone_style.css
@@ -93,7 +93,7 @@ p {
 
 .header {
 	position: fixed;
-	top: 0;
+	top: 100;
 	left: 0;
 	right: 0;
 	background: rgba(0,0,0,0);
@@ -150,6 +150,7 @@ p {
     justify-content: center;
     flex-direction: column;
     transform: scale(3);
+    margin-top: 200px;
 }
 
 button {
