--- a/phone_style.css
+++ b/phone_style.css
@@ -93,10 +93,9 @@ p {
 
 .header {
 	position: relative;
-	top: 0;
+	top: -240px;
 	left: 0;
 	right: 0;
-	bottom: 100;
 	background: rgba(0,0,0,0);
 	padding: 20px;
 	display: flex;
