--- a/phone_style.css
+++ b/phone_style.css
@@ -93,7 +93,7 @@ p {
 
 .header {
 	position: relative;
-	top: -240px;
+	top: -300px;
 	left: 0;
 	right: 0;
 	background: rgba(0,0,0,0);
@@ -148,12 +148,12 @@ p {
     justify-content: center;
     flex-direction: column;
     transform: scale(3);
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 button {
 	display: block;
-	margin: 20px auto 0;
+	margin: 0 auto;
 	padding: 10px 20px;
 	background-color: transparent;
 	border: none;
